feat(enum): add Industry enum with alias mapping and fromValue normalization