@@ -1,6 +1,9 @@
 package vn.viettel.khdn.crm_DN_VNR20K_2K.model.enums;
 
+import java.text.Normalizer;
 import lombok.Getter;
+import java.text.Normalizer;
+import java.util.regex.Pattern;
 
 @Getter
 public enum Industry {
@@ -16,7 +19,7 @@ public enum Industry {
     MANUFACTURING_PROCESSING_IMPORT_EXPORT("Công nghiệp chế biến, sản xuất, xuất nhập khẩu", new String[]{"San xuat", "Xuat nhap khau", "Che bien", "Cong nghiep", "XNK"}),
     ENVIRONMENT_FIRE_PROTECTION("Dịch vụ môi trường, PCCC", new String[]{"Moi truong", "PCCC", "Phong chay chua chay"}),
     LEGAL_INSPECTION_TESTING("Dịch vụ Pháp lý - Giám định - Kiểm định", new String[]{"Phap ly", "Giam dinh", "Kiem dinh", "Luat"}),
-    ACCOUNTING_AUDITING_TAX("Kế toán, kiểm toán, thuế", new String[]{"Ke toan", "Kiem toan", "Thue", "Tai chinh"}),
+    ACCOUNTING_AUDITING_TAX("Kế toán, kiểm toán, thuế", new String[]{"Ke toan", "Kiem toan", "Thue"}),
     EDUCATION("Giáo dục", new String[]{"Giao duc", "Dao tao", "Truong hoc", "Hoc vien"}),
     LOGISTICS("Logistics", new String[]{"Van tai", "Giao nhan", "Kho bai", "Vận tải"}),
     BANKING_FINANCE_INSURANCE("Ngân hàng - Tài Chính - Bảo hiểm", new String[]{"Ngan hang", "Tai chinh", "Bao hiem", "Bank"}),
@@ -35,34 +38,31 @@ public enum Industry {
     }
 
     public static Industry fromValue(String value) {
-        if (value == null || value.trim().isEmpty()) {
-            return OTHER_SERVICES;
+    if (value == null || value.isBlank()) {
+        return OTHER_SERVICES;
+    }
+
+    String cleanValue = Normalizer.normalize(value.trim(), Normalizer.Form.NFC);
+
+    for (Industry industry : Industry.values()) {
+        if (industry.name().equalsIgnoreCase(cleanValue)) {
+            return industry;
+        }
+        String normalizedDisplay = Normalizer.normalize(industry.getDisplayName(), Normalizer.Form.NFC);
+        if (normalizedDisplay.equalsIgnoreCase(cleanValue)) {
+            return industry;
         }
 
-        String cleanValue = value.trim().toLowerCase();
-
-        for (Industry i : Industry.values()) {
-            // 1. So khớp chính xác theo Enum name (ví dụ: IT_SOFTWARE)
-            if (i.name().toLowerCase().equals(cleanValue)) {
-                return i;
-            }
-
-            // 2. So khớp theo Tên hiển thị (ví dụ: Công nghệ, phần mềm)
-            if (i.getDisplayName().toLowerCase().equals(cleanValue)) {
-                return i;
-            }
-
-            // 3. So khớp theo danh sách Bí danh (Alias)
-            if (i.getAliases() != null) {
-                for (String alias : i.getAliases()) {
-                    if (alias.toLowerCase().equals(cleanValue)) {
-                        return i;
-                    }
+        if (industry.getAliases() != null) {
+            for (String alias : industry.getAliases()) {
+                String normalizedAlias = Normalizer.normalize(alias, Normalizer.Form.NFC);
+                if (normalizedAlias.equalsIgnoreCase(cleanValue)) {
+                    return industry;
                 }
             }
         }
-
-        // Không tìm thấy gì thì gom vào dịch vụ khác
-        return OTHER_SERVICES;
     }
+
+    return OTHER_SERVICES;
+}
 }
